<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2018 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/settingsGroup_padding">

            <TextView android:labelFor="@+id/appwidget_timezone_mode"
                android:id="@+id/appwidget_timezone_mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/settings_timezone_mode"
                android:textSize="?attr/text_size_small" />

            <Spinner android:id="@+id/appwidget_timezone_mode" android:layout_width="match_parent"
                android:dropDownVerticalOffset="16sp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout android:id="@+id/appwidget_timezone_custom_layout"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp" android:gravity="center_vertical">

            <TextView android:id="@+id/appwidget_timezone_custom_label"
                android:layout_gravity="center_vertical" android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/settings_timezone_custom"
                android:textSize="?attr/text_size_small"
                android:labelFor="@+id/appwidget_timezone_custom" />

            <FrameLayout
                android:layout_width="0dp" android:layout_weight="1"
                android:layout_height="wrap_content">

                <Spinner android:id="@+id/appwidget_timezone_custom" android:layout_width="match_parent"
                    android:dropDownVerticalOffset="32sp" android:layout_height="wrap_content" android:minHeight="48dp" />

                <ProgressBar android:id="@+id/appwidget_timezone_progress" android:visibility="gone"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end|right"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/appwidget_timezone_custom_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <include layout="@layout/layout_listitem_timezone" />

            </LinearLayout>

            <com.forrestguice.support.widget.ImageButton android:id="@+id/sort_timezones"
                style="@style/ActionButton" android:visibility="visible"
                android:src="?attr/icActionSort" app:tint="@drawable/btn_accent"
                android:layout_width="wrap_content" android:layout_height="48dp"
                android:contentDescription="@string/timezone_sort_contextAction" />

        </LinearLayout>

        <LinearLayout android:id="@+id/appwidget_solartime_layout"
                      android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center"
                      android:orientation="horizontal"
                      android:paddingTop="8dp"
                      android:visibility="visible">

            <TextView android:id="@+id/appwidget_solartime_label" android:visibility="gone"
                      android:labelFor="@+id/appwidget_solartime"
                      android:layout_gravity="center_vertical"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:text="@string/settings_timezone_standard"
                      android:textSize="?attr/text_size_small" />

            <Spinner android:id="@+id/appwidget_solartime"
                android:layout_width="0dp" android:layout_weight="1" android:layout_gravity="center"
                android:dropDownVerticalOffset="16sp"
                android:layout_height="wrap_content" android:minHeight="48dp" />

            <com.forrestguice.support.widget.ImageButton android:id="@+id/appwidget_solartime_help"
                style="@style/ActionButton" android:visibility="visible"
                android:src="@drawable/ic_action_help_dark" android:tint="?attr/colorAccent"
                android:layout_width="wrap_content" android:layout_height="48dp"
                android:contentDescription="@string/action_help" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/appwidget_timezone_extrasgroup"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" android:layout_marginTop="0dp"
            android:paddingTop="@dimen/settingsGroup_padding" android:visibility="gone">

            <View android:layout_width="match_parent" android:layout_height="2dp"
                style="@style/SunsetTimeHorizontalRule"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/appwidget_timezone_extras0"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="?attr/text_size_small"
                android:paddingTop="@dimen/settingsGroup_padding"
                tools:text="timezone extras" />

        </LinearLayout>

    </LinearLayout>

</merge>