...
            android:gravity="start|center_vertical"

            style="@style/Base.DialogWindowTitle.AppCompat"
            android:text="@string/timezone_dialog_title" />

        <com.forrestguice.support.widget.ImageButton android:id="@+id/dialog_button_accept"
            style="@style/ActionButton" android:contentDescription="@string/timezone_dialog_ok"
            android:layout_width="96dp" android:layout_height="56dp" android:paddingLeft="16dp" android:paddingRight="16dp"
            android:src="?attr/icActionAccept" android:scaleType="fitCenter" android:paddingTop="14dp" android:paddingBottom="14dp"
            android:tint="?attr/text_accentColor" />

    </LinearLayout>

...
